# ParkingLot

./: .gitignore  README.md  SECURITY.md
HyperLPR/: Dockerfile  Pipfile  demo.py
IndoorMapEditor_DCMMC/: .gitignore  README.md  testMapData.json
IndoorMapEditor_DCMMC/src/: IndoorMapEditor.pro  mainwindow.cpp  mainwindow.ui
ParkingLotEditor/: CMakeLists.txt  Makefile  README.md
ParkingLotEditor/data/: testMapData.json  testMapData_new.json
ParkingLotEditor/src/: IndoorMapEditor.qrc  indoormap_en.ts  indoormap_zh_cn.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ParkingLotEditor/src/core/: building.cpp  feature.cpp  feature.h  floor.cpp  floor.h  polygonfeature.h  room.cpp  room.h  scene.cpp  scene.h
ParkingLotEditor/src/gui/: documentview.cpp  handle.cpp  propertyview.cpp  propviewbuilding.cpp  propviewfloor.cpp  propviewfloor.h  propviewroom.cpp  propviewroom.h  scenemodel.cpp
ParkingLotEditor/src/io/: iomanager.cpp
ParkingLotEditor/src/tool/: selecttool.cpp
ParkingLot_full_stack/: ParkingLot.shx  README.md  docker-compose-indoor-camera.yml  docker-compose-outdoor-camera.yml  docker-compose.yml  init.sh  remove_all_cars.sh  start.sh  start_core.sh  start_indoor.sh  start_outdoor.sh  update_docker_compose.sh
ParkingLot_full_stack/DB_final_project/: .gitignore  LICENSE  README.md  docker-compose.yml
ParkingLot_full_stack/parking_lot/: Dockerfile  Pipfile  celerybeat-schedule  db.sqlite3  docker-entrypoint-initenv.sh  init.sh  manage.py  requirements.txt  (+3 more)
indoor3D/: ParkingLot.dbf  ParkingLot.jpg.aux.xml  ParkingLot.shp  index.html
(+330 files in other folders)
